examples/bad/05-invalid-main.wlk
# (invalid main)

def main(a | Int) -> Void:
    return